# Morgan

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  shopify.app.toml  tsconfig.json
docs/: README.md  api-reference.md  local-development.md  morgan-founder-blueprint.md  morgan-user-stories copy.md  morgan-user-stories.md  morgan-ux-user-stories.md
warehouse-etl/: pyproject.toml
warehouse-etl/clickhouse/: init.sql  serving.sql
warehouse-etl/dbt/: .user.yml  dbt_project.yml  profiles.yml  profiles.yml.example
warehouse-etl/dbt/macros/: serving_mart.sql
warehouse-etl/dbt/models/: schema.yml
warehouse-etl/dbt/models/marts/: mart_ad_performance.sql  mart_orders_daily.sql  mart_profit_leaks.sql  mart_recommendations.sql  mart_sku_economics.sql
warehouse-etl/dbt/models/sources/: _clickhouse_sources.yml
warehouse-etl/dbt/models/staging/google_ads/: stg_google_ads.sql
warehouse-etl/dbt/models/staging/meta/: stg_meta_ads.sql
warehouse-etl/dbt/models/staging/profit/: stg_profit_leaks.sql
warehouse-etl/dbt/models/staging/recommendations/: stg_recommendations.sql
warehouse-etl/dbt/models/staging/shopify/: stg_shopify_order_lines.sql  stg_shopify_orders.sql  stg_shopify_products.sql  stg_shopify_refund_lines.sql
warehouse-etl/morgan_etl/: __init__.py  alerts.py  definitions.py  failure_sensors.py  jobs.py  resources.py  schedules.py  sensors.py
warehouse-etl/morgan_etl/assets/: dbt_assets.py  metric_snapshots.py  profit_leak_scan.py  revenue_forecast_refresh.py  sku_demand_forecast_refresh.py
(+402 files in other folders)
